Bug 1934689 - make moz-page-nav-button icons optional r=reusable-components-reviewers,tgiles
This patch makes it so that moz-page-nav-button works with or without an icon. It also updates the documentation to reflect this change, and adds a test to cover the nav's responsive display, focusing on the differences between navs that use icons and those that dont.

Differential Revision: https://phabricator.services.mozilla.com/D231814

UltraBlame original commit: e16f026c8ad60e5fdeb4abd5bdbf4a0f242f998c

--- a/toolkit/content/widgets/moz-page-nav/moz-page-nav.css
+++ b/toolkit/content/widgets/moz-page-nav/moz-page-nav.css
@@ -3,12 +3,6 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 :host {
-  --page-nav-button-border-radius: var(--button-border-radius);
-  --page-nav-button-text-color: var(--button-text-color);
-  --page-nav-button-background-color: transparent;
-  --page-nav-button-background-color-hover: var(--button-background-color-hover);
-  --page-nav-button-background-color-selected: var(--color-accent-primary);
-  --page-nav-button-padding: var(--space-small) var(--space-medium);
   --page-nav-margin-top: 72px;
   --page-nav-margin-bottom: 36px;
   --page-nav-gap: var(--space-large);
@@ -16,14 +10,13 @@
   --page-nav-border-color: var(--border-color);
   --page-nav-focus-outline-inset: var(--focus-outline-inset);
   --page-nav-header-logo-size: calc(var(--icon-size-default) + var(--space-small));
-  --page-nav-width: 240px;
   --page-nav-hr-color: #CFCFD8;
+
   margin-inline-start: 42px;
   position: sticky;
   top: 0;
   height: 100vh;
   display: block;
-  width: var(--page-nav-width);
 
   @media (prefers-reduced-motion) {
     /* (See Bug 1610081) Setting border-inline-end to add clear differentiation between side navigation and main content area */
@@ -32,8 +25,6 @@
 
   @media (max-width: 52rem) {
     grid-template-rows: 1fr auto;
-    --page-nav-width: fit-content;
-    --page-nav-button-padding: var(--space-small);
   }
 }
 
@@ -61,13 +52,13 @@ nav {
     margin-inline-start: calc(var(--space-medium) - ((var(--page-nav-header-logo-size) - var(--icon-size-default)) / 2));
 
     @media (max-width: 52rem) {
-      margin-inline: auto;
+      .has-nav-icons & {
+        margin-inline: auto;
+      }
     }
   }
 
   > .page-nav-header {
-    /* Align the header text/icon with the page nav button icons */
-    margin-inline-start: var(--page-nav-button-padding);
     font-size: var(--font-size-xlarge);
     font-weight: var(--font-weight-bold);
     margin-block: 0;
